<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/tt_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/v_box" android:layout_width="fill_parent" android:layout_height="220.0dip" android:layout_centerInParent="true">
            <RelativeLayout android:background="@drawable/tt_white_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="180.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentBottom="true">
                <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="120.0dip" android:text="3.Make no mistake in one minute,as quickly as you can" />
                <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/v_btn" android:background="@drawable/gp_btn" android:layout_width="60.0dip" android:layout_height="35.0dip" android:layout_marginTop="125.0dip" android:layout_marginRight="30.0dip" android:text="OK" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/h_box" android:visibility="invisible" android:layout_width="288.0dip" android:layout_height="wrap_content" android:minWidth="154.0dip" android:layout_centerInParent="true">
        <TextView android:textSize="20.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="23.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="16.0dip" android:text="@string/gp_u3_t1" />
        <TextView android:textSize="18.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="18.0dip" android:text="@string/gp_u3_t2" android:lineSpacingMultiplier="1.0" />
        <TextView android:textSize="18.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="46.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/gp_u3_t3" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginTop="22.0dip">
            <Button android:textSize="14.0sp" android:layout_width="wrap_content" android:layout_height="26.0sp" android:layout_marginRight="18.0dip" android:text="@string/gp_u3_t4" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:alpha="0.5" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>