<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/tt_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/v_box" android:background="@drawable/tt_white_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="180.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
        <TextView android:textSize="18.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="120.0dip" android:text="1.Colour match Word,\nChoose Right" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/v_btn" android:background="@drawable/gp_btn" android:layout_width="110.0dip" android:layout_height="35.0dip" android:layout_marginTop="125.0dip" android:text="NEXT" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/v_progress" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/h_space" android:layout_width="fill_parent" android:layout_height="wrap_content" android:height="175.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/h_box" android:background="#550000ff" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="136.0dip">
            <TextView android:textSize="20.0sp" android:id="@id/h_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="100.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="20.0dip" android:text="@string/gp_u1_t1" />
            <TextView android:textSize="14.0sp" android:id="@id/h_crop" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="100.0dip" android:layout_marginRight="30.0dip" android:text="@string/gp_u1_t2" />
            <TextView android:textSize="14.0sp" android:id="@id/h_level" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="100.0dip" android:layout_marginRight="30.0dip" android:text="Everyone" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="60.0dip">
                <TextView android:textSize="14.0sp" android:gravity="center" android:id="@id/h_btn" android:background="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:layout_marginBottom="6.0dip" android:text="@string/gp_u1_t3" android:width="128.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:id="@id/h_space2" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
</RelativeLayout>